--- a/.github/workflows/master_check-bioc.yml
+++ b/.github/workflows/master_check-bioc.yml
@@ -25,6 +25,7 @@ on:
     branches: [main, master, r-cmd-check_master]
   pull_request:
     branches: [main, master, r-cmd-check_master]
+  workflow_dispatch:  # 👈 allows manual triggering
 
 name: master_check-bioc
 
